// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolAlert slot should render content passed into the slot 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        alert with slot
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <div>
    content of slot
  </div>
</kol-alert>
`;

exports[`KolAlert slot should render the closer as a single ButtonFC root 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--hasCloser kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        closable alert
      </strong>
      <div class="kol-alert__closer kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-close-button">
        <button aria-describedby="nonce" aria-label="kol-close-alert" class="kol-button__interactive-element" type="button">
          <span class="kol-button__text kol-span kol-span--hide-label">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
              <span aria-hidden="true" class="kol-span__slot" hidden="">
                <slot name="expert" slot="expert"></slot>
              </span>
            </span>
          </span>
        </button>
        <div class="kol-button__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  kol-close-alert
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
        <span class="visually-hidden" id="nonce">
          closable alert
        </span>
      </div>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="alert-heading-nonce">
        Überschrift
      </strong>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h1>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h2>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h3>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h4>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h5>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-message
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-error
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-info
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-success
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="alert">
      <span class="visually-hidden">
        kol-warning
      </span>
      <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
      <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="alert-heading-nonce">
        Überschrift
      </h6>
      <div aria-describedby="alert-heading-nonce" class="kol-alert__content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-alert>
`;
